--- a/index.html
+++ b/index.html
@@ -20,32 +20,56 @@
   <body>
     <script src="script.js"></script>
 
-    <ul id="playlist"></ul>
+    <div class="main-container">
+      <div class="left-container">
+        <div class="album-container">
+          <img id="albumart" />
+          <div class="album-discription">
+            <h1 id="album-title">タイトル</h1>
+            <h2 id="album-artist">アルバムアーティスト</h2>
+          </div>
+        </div>
+        <div class="song-discriptions">
+          <p id="song-artist">曲のアーティスト</p>
+          <p id="song-desctiption">曲の説明</p>
+        </div>
+      </div>
+      <div class="right-container">
+        <p class="playlist-title">楽曲リスト</p>
+        <ul id="playlist"></ul>
+      </div>
+    </div>
 
     <audio id="audio"></audio>
+    <div class="bottom">
+      <div class="timer_bar">
+        <div class="progress-bar">
+          <form class="js-slider-form" onsubmit="return false;">
+            <input type="range" id="seek" min="0" max="2000" value="0" />
+          </form>
+        </div>
+        <div id="timer">00:00 / 00:00</div>
+      </div>
+      <div class="button-container">
+        <div class="left-aligned">
+          <img
+            onclick="selectFolder()"
+            src="folder.png"
+            id="open-folder-button"
+          />
+        </div>
+        <div class="center-aligned">
+          <img onclick="playPrevious()" id="previous-button" src="prev.png" />
+          <img onclick="pauseOrPlay()" id="play-pause-button" src="play.png" />
+          <img onclick="playNext()" id="next-button" src="next.png" />
+        </div>
+        <div class="right-aligned">
+          <img onclick="mute()" id="volume-button" src="volume.png" />
+          <form class="js-slider-form" onsubmit="return false;">
+            <input type="range" id="volume" min="0" max="100" value="100" />
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
-  <div class="bottom">
-    <div class="timer_bar">
-      <div class="progress-bar">
-        <form class="js-slider-form" onsubmit="return false;">
-          <input type="range" id="seek" min="0" max="2000" />
-        </form>
-      </div>
-      <div id="timer">00:00 / 00:00</div>
-    </div>
-    <div class="button-container">
-      <div class="left-aligned">
-        <img
-          onclick="selectFolder()"
-          src="folder.png"
-          id="open-folder-button"
-        />
-      </div>
-      <div class="center-aligned">
-        <img onclick="playPrevious()" id="previous-button" src="prev.png" />
-        <img onclick="pauseOrPlay()" id="play-pause-button" src="play.png" />
-        <img onclick="playNext()" id="next-button" src="next.png" />
-      </div>
-    </div>
-  </div>
 </html>
