descriptionの綴り間違えるってマジ？

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <div class="left-container">
         <div class="album-container">
           <img id="albumart" />
-          <div class="album-discription">
+          <div class="album-description">
             <h1 id="album-title">タイトル</h1>
             <h2 id="album-artist">アルバムアーティスト</h2>
           </div>
         </div>
-        <div class="song-discriptions">
+        <div class="song-descriptions">
           <p id="song-artist">曲のアーティスト</p>
-          <p id="song-desctiption">曲の説明</p>
+          <p id="song-description">曲の説明</p>
         </div>
       </div>
       <div class="right-container">
