--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             src="folder.png"
             id="open-folder-button"
           />
+          <img src="info.png" id="info-button" onclick="visitInfo()" />
         </div>
         <div class="center-aligned">
           <img onclick="playPrevious()" id="previous-button" src="prev.png" />
